--- a/templates/book_details.html
+++ b/templates/book_details.html
@@ -215,7 +215,7 @@
                 <div class="dropdown-content">
                     <a href="/home/edit_account"><i class="fas fa-edit"></i> Edit Account</a>
                     <a href="/home/change_password"><i class="fas fa-key"></i> Change Password</a>
-                    <a href="/home/view_orders"><i class="fas fa-box"></i> View Orders</a>
+                    <a href="/home/home/ViewOrders"><i class="fas fa-box"></i> View Orders</a>
                     <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
                 </div>
             </div>
