--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -356,7 +356,7 @@
                 <div class="dropdown-content">
                     <a href="/home/view_profile"><i class="fas fa-user-circle"></i> View Profile</a>
                     <a href="/home/change_password"><i class="fas fa-key"></i> Change Password</a>
-                    <a href="/home/view_orders"><i class="fas fa-box"></i> View Orders</a>
+                    <a href="/home/ViewOrders"><i class="fas fa-box"></i> View Orders</a>
                     <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
                 </div>
             </div>
