--- a/templates/index.html
+++ b/templates/index.html
@@ -251,7 +251,7 @@
             <a href="/home/my_account"><i class="fas fa-user-circle"></i> View Account</a>
             <a href="/home/edit_account"><i class="fas fa-edit"></i> Edit Details</a>
             <a href="/home/change_password"><i class="fas fa-key"></i> Change Password</a>
-            <a href="/home/view_orders"><i class="fas fa-box"></i> View Orders</a>
+            <a href="/home/ViewOrders"><i class="fas fa-box"></i> View Orders</a>
             <a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
           </div>
         </div>
