--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -167,7 +167,7 @@
         <a href="/home" class="nav-link"><i class="fas fa-home"></i> Home</a>
         <a href="/home/edit_account" class="nav-link"><i class="fas fa-edit"></i> Edit Account</a>
         <a href="/home/change_password" class="nav-link"><i class="fas fa-key"></i> Change Password</a>
-        <a href="/home/view_orders" class="nav-link"><i class="fas fa-box"></i> View Orders</a>
+        <a href="/home/ViewOrders" class="nav-link"><i class="fas fa-box"></i> View Orders</a>
         <a href="#" class="nav-link" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
       </nav>
     </header>
